[package]
name = "access0"
version = "0.1.0"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket]
version = "0.4"
default-features = false

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
